--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="fav.png">
     <title>Modding Repository</title>
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G4VR1D3B6M"></script>
@@ -42,6 +43,7 @@
             <input type="file" id="import-file-input" accept=".json" style="display: none;">
             <button id="import-changes-button" class="search-button">Import Changes</button>
             <button id="export-changes-button" class="search-button">Export Changes</button>
+            <a href="TextureInfoPage/textures.html" class="search-button" style="text-decoration: none;">Texture Info</a>
         </div>
         <div class="multi-select-actions">
             <span id="selected-assets-count" class="selected-count">0 Assets Selected</span>
