--- a/TextureInfoPage/textures.html
+++ b/TextureInfoPage/textures.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Venge.io Texture Atlas</title>
     <link rel="stylesheet" href="textures.css">
 </head>
+
 <body>
     <header>
-        <h1>🎮 Venge.io Modding – Collected Texture Data</h1>
-        <p>Welcome, new modders! This page helps you identify and understand the game's texture files. Explore the categories below to see raw textures and their in-game appearances, making it easier to find what you want to modify.</p>
+        <a href="../index.html" class="back-link">← BACK</a>
+        <h1>Texture Atlas</h1>
+        <p>Identify where each texture is used in the game</p>
     </header>
 
     <main id="texture-sections">
-        </main>
+    </main>
 
     <div id="lightbox-modal" class="modal">
         <span class="close-button">&times;</span>
@@ -23,4 +26,5 @@
 
     <script src="textures.js"></script>
 </body>
+
 </html>
